# meal_app

./: .gitignore  README.md  add_meal.py  app.py  config.py  create_table.py  gui_app.py  initialise_db.sql  pyproject.toml  requirements.txt  sample_database_data.json  variables.py  venvActivate  wsgi.py
.github/workflows/: github-actions-demo.yml  github-actions.yml
database_setup/: add_dates.py  dairy_ingredients.json  dry_ingredients.json  fresh_ingredients.json  import_database.py  import_ingredients.py  import_sample_data.py  tinned_ingredients.json
meal_app/: __init__.py  app.py  classes.py  extensions.py  models.py  test_file.py  utilities.py  variables.py
meal_app/home/: home copy.py  home.py  test_home.py
meal_app/ingredients/: add_ingredient.py  search_ingredients.py
meal_app/meal_plans/: create.py  create_meal_plan.py  delete.py  delete_meal_plan.py  display.py  display_meal_plan.py  load.py  load_meal_plan.py
meal_app/meals/: add.py  add_meal.py  edit.py  edit_meal.py  find.py  find_meal.py  inspire.py  list_meals.py  search.py  views.py
meal_app/templates/: ingredients_list.html  layout.html  todo.html
static/styles/: styles.css
templates/: add.html  choose_meal_plan.html  create_meal_plan.html  delete_complete.html  delete_meal_plan.html  display_meal_plan.html  find.html  find_results.html  find_results_OLD.html  index.html  ingredients_list.html  list_meals.html  no_meal_plans.html  old_find.html  save_complete.html  search.html  search_results.html  styles.css  todo.html
tests/: conftest.py
tests/unit/: test_home.py
(+33 files in other folders)
